# Warzone-QML-Frontend

./: .gitignore  CMakeLists.txt  config.h  make_build.sh
data/: CMakeLists.txt  config
data/base/frontend/: functions.js  main.qml  quit.qml
data/base/frontend/screens/: hostGameScreen.qml  keymappingsScreen.qml  menuScreen.qml
data/base/frontend/screens/hostGame/: mapSelect.qml  players.qml
data/base/frontend/screens/menu/: audioOptions.qml  gameOptions.qml  graphicsOptions.qml  main.qml  mouseOptions.qml  options.qml  singlePlayer.qml  tutorials.qml  videoOptions.qml
data/base/frontend/widgets/: BlueBox.qml  Chatbox.qml  ClickSelect.qml  ImageButton.qml  ImageSelect.qml  ImageSelectV2.qml  LargeText.qml  MapButton.qml  MenuTextButton.qml  ScrollBar.qml  SideText.qml  SingleLineEdit.qml  Slider.qml  SmallTextButton.qml
data/frontend/: functions.js  main.qml
data/frontend/images/: imagemap.js
data/frontend/menus/: mainMenu.qml  optionsMenu.qml  singlePlayerMenu.qml  tutorialsMenu.qml
data/frontend/screens/: hostGameScreen.qml  keymappingsScreen.qml  menuScreen.qml
data/frontend/screens/hostGame/: mapSelect.qml  players.qml
data/frontend/screens/menu/: audioOptions.qml  gameOptions.qml  graphicsOptions.qml  keyMappings.qml  main.qml  mouseOptions.qml  options.qml  singlePlayer.qml  tutorials.qml  videoOptions.qml
data/frontend/widgets/: BlueBox.qml  Chatbox.qml  ClickSelect.qml  ImageButton.qml  ImageSelect.qml  ImageSelectV2.qml  MenuTextButton.qml  SingleLineEdit.qml  Slider.qml  SmallTextButton.qml
lib/Imagemap/: CMakeLists.txt  container.cpp  container.h  containerimage.cpp  containersvg.cpp  loader.cpp  loader.h  map.cpp  map.h
lib/WzLog/: CMakeLists.txt  Log.cpp  Log.h  Logger.cpp  Logger.h  LoggerDest.cpp  LoggerDest.h
src/: CMakeLists.txt  main.cpp
src/Core/: confighandler.cpp  confighandler.h  mainwindow.h
src/Core/Filesystem/: file.cpp  file.h  filesystem.cpp  filesystem.h  physfs_ext.h  qphysfsenginehandler.cpp  qphysfsenginehandler.h
src/Core/Framework/: debug.cpp  debug.h  frame.h  gettext.h  i18n.cpp  i18n.h  string_ext.h  wzglobal.h
src/Core/Map/: level_lexer.cpp  level_lexer.lpp  levparser.cpp  levparser.h  map.cpp  map.h  map_p.h
src/Core/Net/: lobbyclient.cpp  lobbyclient.h  net.cpp  net.h
src/Frontend/: config.cpp  config.h  imageprovider.cpp  imageprovider.h  qmlimagemapprovider.cpp  qmlimagemapprovider.h  wzheaders.h  wzhelper.cpp  wzhelper.h  wzqmlview.cpp  wzqmlview.h
tools/: imgToJs.py
tools/extractmap/: CMakeLists.txt  main.cpp
