INCLUDE_DIRECTORIES(${QMLFRONTEND_INCLUDES} ${imagemap_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})

SET(extractmap_SRCS main.cpp)

ADD_EXECUTABLE(extractmap ${extractmap_SRCS} ${imagemap_SOURCE})
TARGET_LINK_LIBRARIES(extractmap ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTSVG_LIBRARY} ${QJSON_LIBRARIES})
